# Mailings_django_project

./: README.md  data.json  mailings_data.json  pyproject.toml  users_data.json
config/: settings.py  urls.py
mailings/: __init__.py  admin.py  apps.py  models.py  scheduler.py  urls.py  views.py
mailings/migrations/: 0001_initial.py  0002_alter_logs_response_alter_logs_status.py  0002_message_client.py  0003_alter_logs_last_attempt_alter_logs_status.py  0003_alter_message_client.py  0004_alter_logs_status.py  0004_alter_message_client.py  0005_alter_logs_last_attempt_alter_logs_response_and_more.py  0005_remove_message_client.py  0006_alter_logs_last_attempt.py  0007_blog.py
mailings/templates/mailings/: base.html  blog_confirm_delete.html  blog_detail.html  blog_list.html  cards.html  client_confirm_delete.html  client_detail.html  client_list.html  logs_list.html  main_page.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  settings_list.html
mailings/templatetags/: mediapath.py
static/mailings/site/content/docs/5.3/getting-started/: parcel.md  vite.md  webpack.md
static/mailings/site/data/: examples.yml
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: user_form.html
